hphp/test/slow/rx/multiple_reactivity2.php.expectf
Fatal error: Only one of following annotations is allowed: `__Pure`, `__NonRx`, `__Cipp`, `__CippLocal`, `__CippGlobal`. in %s/test/slow/rx/multiple_reactivity2.php on line 4
